# Airlock

.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .flake8  .gitignore  __init__.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
backend/src/: __init__.py  app.py
backend/src/api/: dependencies.py  version.py
backend/src/core/: limiter.py
backend/src/services/: version_provider.py
backend/src/telemetry/: version_logging.py
backend/tests/: __init__.py
backend/tests/bdd/: test_server_version.py
backend/tests/bdd/features/: server_version.feature
backend/tests/contract/: test_version_endpoint.py
backend/tests/integration/: test_security_guards.py
backend/tests/unit/: test_version_logging.py  test_version_provider.py
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.a11y.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/scripts/: keyboard-audit.mjs
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/hooks/: useServerVersion.test.ts  useServerVersion.ts
frontend/src/pages/: ErrorView.stories.tsx  ErrorView.tsx  InitialSite.stories.tsx  InitialSite.test.tsx  InitialSite.tsx
frontend/src/services/: versionService.mock.ts  versionService.ts
frontend/src/test-utils/: renderWithProviders.tsx
specs/001-initial-site/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+12 files in other folders)
