[project]
name = "initial_site_backend"
version = "0.1.0"
description = "FastAPI backend for Initial Site version endpoint"
authors = [{ name = "Airlock Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "slowapi>=0.1.9",
  "python-json-logger>=2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-bdd>=7.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "flake8>=7.1.0",
  "flake8-bugbear>=24.4.26",
  "flake8-import-order>=0.18.2",
  "types-python-json-logger>=2.0.3.20240813",
  "httpx>=0.27.0",
  "freezegun>=1.5.0",
  "jsonschema>=4.22.0"
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
testpaths = ["backend/tests"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = false
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
exclude = [
  "backend/tests"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist"
]
per-file-ignores = [
  "backend/tests/*:S101"
]

[tool.coverage.run]
branch = true
source = ["backend/src"]

[tool.coverage.report]
show_missing = true

